--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,8 @@
     </section>
 
     <footer class="footer">
-      <p class="muted">Made for pros who cannot afford rework.</p>
+      <p class="muted">Made for people who dislike rework.</p>
+      <a class="disclaimer-link" href="/disclaimer.html">Disclaimer</a>
     </footer>
   </main>
 
