--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <h1>Paint or Stain Today?</h1>
         <p class="sub">Professional-safe go/no-go guidance using forecasted temperature, humidity, wind, and rain risk.</p>
       </div>
-      <a class="coffee" href="#" id="coffeeLink" aria-label="Buy me a coffee">☕ Buy me a coffee</a>
+      <a class="bmac-link" href="https://buymeacoffee.com/michael_ruhs" id="coffeeLink" aria-label="Buy me a coffee">☕ Buy me a coffee</a>
     </header>
 
     <section class="card">
